# whatsapp

./: README.md  pyproject.toml
notebooks/: whatsapp_analysis.ipynb
