[project]
name = "whatsapp"
version = "0.1.0"
description = "Analizando un grupo de WhatsApp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji>=2.15.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "wordcloud>=1.9.4",
]
